--- a/summary.html
+++ b/summary.html
@@ -62,7 +62,7 @@
     const db = firebase.firestore();
 
     const allTasks = [
-      "ตึกเฮงๆ",
+       "ตึกเฮงๆ",
       "ข้างเฮงๆ",
       "ตึกซัก",
       "บ้าน 21",
@@ -71,8 +71,9 @@
       "เก็บขอบบัว+เช็ดประตู",
       "ร้านเฮงๆ+พื้นที่ข้างหน้า",
       "ห้องเก็บของ(ข้างเฮงๆ)+เครื่องซักผ้าข้างหน้า",
+      "รดน้ำต้นไม้",
+      "เคาน์เตอร์หน้าร้านซัก",
       "ห้องซัก",
-      "รดน้ำต้นไม้"
     ];
 
     const dateInput = document.getElementById("summaryDate");
